--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,192 @@
+absl-py==2.2.1
+aiofiles==23.2.1
+aiohttp==3.9.3
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+alpaca==1.0.0
 altair==5.3.0
 annotated-types==0.6.0
 anyio==4.3.0
-asttokens==2.4.1
-certifi==2023.11.17
+astunparse==1.6.3
+attrs==23.2.0
+axios==0.4.0
+beautifulsoup4==4.12.3
+blinker==1.8.0
+bs4==0.0.2
+cachetools==5.3.3
+certifi==2024.2.2
+chardet==3.0.4
 charset-normalizer==3.3.2
+chess==1.10.0
 click==8.1.7
-comm==0.2.2
+colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
-debugpy==1.8.1
-decorator==5.1.1
+dataclasses-json==0.6.4
 deep-translator==1.11.4
-exceptiongroup==1.2.0
-executing==2.0.1
-fastapi==0.109.0
-filelock==3.13.1
-fonttools==4.50.0
+defusedxml==0.7.1
+distro==1.9.0
+dotenv-python==0.0.1
+fastapi==0.110.0
+ffmpy==0.3.2
+filelock==3.13.4
+Flask==3.0.3
+Flask-Cors==5.0.0
+flatbuffers==25.2.10
+fonttools==4.51.0
 fpdf==1.7.2
-fpdf2==2.7.8
+fpdf2==2.8.2
+frozenlist==1.4.1
 fsspec==2024.3.1
-gradio==4.22.0
-gradio_client==0.11.0
-h11==0.14.0
-httpcore>=0.16.0
-httpx>=0.24.0
-idna==3.6
-importlib-resources==6.4.0
-ipykernel==6.29.4
-ipython==8.24.0
-jedi==0.19.1
+gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.38.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+googletrans==4.0.0rc1
+gradio==4.28.3
+gradio_client==0.16.0
+greenlet==3.0.3
+grpcio==1.71.0
+h11==0.9.0
+h2==3.2.0
+h5py==3.13.0
+hpack==3.0.0
+hstspreload==2025.1.1
+httpcore==0.9.1
+httpx==0.13.3
+huggingface-hub==0.30.1
+hyperframe==5.2.0
+idna==2.10
+imageio==2.37.0
+importlib_resources==6.4.0
+itsdangerous==2.2.0
+jax==0.4.30
+jaxlib==0.4.30
 Jinja2==3.1.3
-joblib==1.4.0
-jsonschema==4.22.0
+jiter==0.5.0
+joblib==1.4.2
+jsonify==0.5
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
+keras==2.14.0
 kiwisolver==1.4.5
-langcodes==3.3.0
-Markdown==3.6
+langchain==0.1.13
+langchain-community==0.0.29
+langchain-core==0.1.34
+langchain-openai==0.1.1
+langchain-text-splitters==0.0.1
+langchainhub==0.1.15
+langgraph==0.0.30
+langsmith==0.1.31
+lazy_loader==0.4
+libclang==18.1.1
+lime==0.2.0.1
+lxml==5.1.0
+Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.1
 matplotlib==3.8.4
-matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml-dtypes==0.2.0
 mpmath==1.3.0
-nest-asyncio==1.6.0
-networkx==3.3
-numpy==1.26.4
-orjson==3.10.1
-packaging==24.0
-pandas==2.2.2
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-Pillow==10.3.0
-platformdirs==4.2.0
-prometheus-client==0.20.0
-prompt-toolkit==3.0.43
+multidict==6.0.5
+mypy-extensions==1.0.0
+namex==0.0.8
+networkx==3.4.2
+numpy==1.26.2
+oauthlib==3.2.2
+openai==1.50.2
+opencv-python==4.8.1.78
+opt_einsum==3.4.0
+optree==0.14.1
+orjson==3.9.15
+packaging==23.2
+pandas==2.1.3
+pillow==10.3.0
+polygon-api-client==1.13.6
 protobuf==4.25.3
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.22
+pyarrow==16.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycryptodome==3.20.0
 pydantic==2.6.4
 pydantic_core==2.16.3
-Pygments==2.18.0
+pydeck==0.9.0b1
+pydub==0.25.1
+Pygments==2.17.2
+PyJWT==2.8.0
+PyMuPDF==1.25.4
 pyparsing==3.1.2
-python-dateutil==2.9.0.post0
+PyPDF2==3.0.1
+pypiwin32==223
+python-chess==1.999
+python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
+pywin32==306
 PyYAML==6.0.1
-pyzmq==26.0.3
+referencing==0.35.0
+regex==2023.12.25
+reportlab==4.3.1
 requests==2.31.0
+requests-oauthlib==2.0.0
 rfc3986==1.5.0
+rich==13.7.1
 rpds-py==0.18.0
+rsa==4.9
+ruff==0.4.2
+sacremoses==0.1.1
+safetensors==0.5.3
+schedule==1.2.2
+scikit-image==0.25.2
 scikit-learn==1.4.2
 scipy==1.13.0
-seaborn==0.13.2
+secure-smtplib==0.1.1
+semantic-version==2.10.0
+shellingham==1.5.4
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
-stack-data==0.6.3
+SQLAlchemy==2.0.29
 starlette==0.36.3
-sympy==1.12
+streamlit==1.33.0
+sympy==1.13.1
+tenacity==8.2.3
+tensorboard==2.14.1
+tensorboard-data-server==0.7.2
+tensorflow==2.14.0
+tensorflow-estimator==2.14.0
+tensorflow-intel==2.14.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.0.0
 threadpoolctl==3.5.0
-tifffile==2024.4.18
-tinycss2==1.2.1
-tomli==2.0.1
+tifffile==2025.3.30
+tiktoken==0.6.0
+tokenizers==0.21.1
+toml==0.10.2
+tomlkit==0.12.0
 toolz==0.12.1
+torch==2.6.0
+tornado==6.4
 tqdm==4.66.2
-traitlets==5.14.3
-typing_extensions==4.11.0
+transformers==4.50.3
+typer==0.12.3
+types-requests==2.31.0.6
+types-urllib3==1.26.25.14
+typing-inspect==0.9.0
+typing_extensions==4.12.2
 tzdata==2024.1
-uc-micro-py==1.0.3
 urllib3==2.2.1
 uvicorn==0.29.0
-wcwidth==0.2.13
-webcolors==1.13
-websockets==12.0
-zipp==3.18.1
-tensorflow==2.14.0
-tensorflow-io-gcs-filesystem==0.31.0
-beautifulsoup4==4.12.3
+watchdog==4.0.0
+websockets==11.0.3
+Werkzeug==3.0.2
+wrapt==1.14.1
+yarl==1.9.4
