--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ aiosignal==1.3.1
 alpaca==1.0.0
 altair==5.3.0
 annotated-types==0.6.0
-anyio==4.3.0
+anyio==3.*
 astunparse==1.6.3
 attrs==23.2.0
 axios==0.4.0
