--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -123,13 +123,13 @@ PyJWT==2.8.0
 PyMuPDF==1.25.4
 pyparsing==3.1.2
 PyPDF2==3.0.1
-
+pypiwin32==223
 python-chess==1.999
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
-
+pywin32==306
 PyYAML==6.0.1
 referencing==0.35.0
 regex==2023.12.25
